Added swagger tags
